# hangman

./: Cargo.toml  README.md
hangman/: Cargo.toml
hangman-client/: Cargo.toml
hangman-client/src/: main.rs  solver.rs
hangman-client/src/solver/: random.rs  strategic.rs  user.rs
hangman-server/: Cargo.toml
hangman-server/src/: main.rs
hangman/src/: lib.rs
src/: main.rs
