[package]
name = "hangman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
clap = { version = "3.2.16", features = ["derive"] }
hashbrown = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
squirrel-rng = "0.2.1"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
