[package]
name = "hangman-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }
hangman = { path = "../hangman" }
rand = "0.8.5"
read_input = "0.8.6"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
squirrel-rng = "0.2.1"
