[package]
name = "hangman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.3"
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
